# Steelux

./: .gitignore  .gitmodules  2  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: test.hpp
lib/include/sl/: SDLWindow.hpp  Steelux.hpp  application.hpp  core.hpp  entryPoint.inl  eventManager.hpp  eventManager.inl  inputManager.hpp  result.hpp  window.hpp
lib/include/sl/linux/: waylandWindow.hpp
lib/include/sl/memory/: allocator.hpp  allocator.inl  allocatorTraits.hpp  debugAllocator.hpp  debugAllocator.inl  doubleBufferedAllocator.hpp  doubleStackAllocator.hpp  heapAllocator.hpp  poolAllocator.hpp  poolAllocator.inl  singleFrameAllocator.hpp  stackAllocator.hpp
lib/include/sl/memory/gpu/: allocator.hpp  heapAllocator.hpp
lib/include/sl/render/: renderer.hpp
lib/include/sl/render/vulkan/: GPU.hpp  instance.hpp  pipeline.hpp  renderPass.hpp  resource.hpp  resource.inl  shader.hpp  swapchain.hpp  utils.hpp  vertexBuffer.hpp
lib/include/sl/utils/: array.hpp  array.inl  assert.hpp  endianness.hpp  endianness.inl  enums.hpp  enums.inl  errorStack.hpp  file.hpp  hash.hpp  hash.inl  iterator.hpp  iterator.inl  logger.hpp  logger.inl  memory.hpp  numberWrapper.hpp  string.hpp  string.inl  time.hpp  units.hpp  utils.hpp  uuid.hpp
lib/src/: SDLWindow.cpp  application.cpp  eventManager.cpp  inputManager.cpp  test.cpp  window.cpp
lib/src/linux/: waylandWindow.cpp
lib/src/memory/: debugAllocator.cpp  doubleStackAllocator.cpp  heapAllocator.cpp  stackAllocator.cpp
lib/src/memory/gpu/: heapAllocator.cpp
lib/src/render/: renderer.cpp
lib/src/render/vulkan/: gpu.cpp  instance.cpp  pipeline.cpp  resource.cpp  shader.cpp  swapchain.cpp  vertexBuffer.cpp
lib/src/utils/: enums.cpp  errorStack.cpp  file.cpp  logger.cpp  string.cpp  time.cpp  uuid.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
scripts/: compile.sh  compile_tests.sh  run.sh  run_tests.sh  setup_linux.sh
shaders/: CMakeLists.txt  test.frag  test.vert
tests/: CMakeLists.txt
tests/src/: array.cpp  string.cpp
vendors/xdg-shell/: CMakeLists.txt
